# cocoindex

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: CI.yml  _test.yml  docs_test.yml  e2e_type_check.yml  fast_check.yml  links.yml
docs/: docusaurus.config.ts
docs/docs/targets/: doris.md  index.md
docs/src/components/ActionButtons/: index.tsx
docs/src/components/Badge/: index.tsx  styles.module.css
docs/src/components/Button/: index.tsx  styles.module.css
docs/src/components/Card/: index.tsx  styles.module.css
docs/src/components/Color/: colors.css  index.ts
docs/src/components/GitHubButton/: index.tsx
docs/src/components/GitHubStar/: index.tsx  styles.module.css
docs/src/components/ImageCard/: index.tsx  styles.module.css
docs/src/components/Inset/: index.tsx  styles.module.css
docs/src/components/LastReviewed/: index.tsx  styles.module.css
docs/src/components/RadioCards/: index.tsx  styles.module.css
docs/src/components/VersionSelector/: index.tsx  styles.module.css
docs/src/css/: custom.css  doc.css  scrollbar.css  sidebar.css
docs/src/theme/Footer/: index.tsx  styles.module.css
docs/src/theme/Navbar/: index.tsx  styles.module.css
examples/amazon_s3_embedding/: pyproject.toml
examples/azure_blob_embedding/: pyproject.toml
examples/code_embedding/: pyproject.toml
examples/custom_output_files/: pyproject.toml
examples/custom_source_hn/: pyproject.toml
examples/docs_to_knowledge_graph/: pyproject.toml
examples/face_recognition/: pyproject.toml
examples/fastapi_server_docker/: requirements.txt
examples/gdrive_text_embedding/: pyproject.toml
examples/hn_trending_topics/: pyproject.toml
examples/image_search/: pyproject.toml
examples/live_updates/: pyproject.toml
examples/manuals_llm_extraction/: pyproject.toml
examples/meeting_notes_graph/: pyproject.toml
examples/multi_format_indexing/: pyproject.toml
examples/paper_metadata/: pyproject.toml
examples/patient_intake_extraction/: pyproject.toml
examples/patient_intake_extraction_baml/: pyproject.toml
examples/patient_intake_extraction_dspy/: pyproject.toml
examples/pdf_elements_embedding/: pyproject.toml
examples/pdf_embedding/: pyproject.toml
examples/postgres_source/: pyproject.toml
examples/product_recommendation/: pyproject.toml
examples/slides_to_speech/: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/slides_to_speech/baml_src/: generators.baml  slides.baml
examples/text_embedding/: pyproject.toml
examples/text_embedding_doris/: .env  .gitignore  README.md  main.py  pyproject.toml
examples/text_embedding_lancedb/: pyproject.toml
examples/text_embedding_qdrant/: pyproject.toml
python/cocoindex/: engine_object.py  flow.py
python/cocoindex/connectors/doris/: __init__.py  _target.py
python/cocoindex/targets/: __init__.py  doris.py
python/cocoindex/tests/targets/: __init__.py  test_doris_integration.py  test_doris_unit.py
