[project]
name = "hn-trending-topics"
version = "0.1.0"
description = "Example using custom source for HackerNews API to extract trending topics with LLM."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=0.3.26,<1",
    "aiohttp>=3.8.0",
    "psycopg[binary,pool]",
]

[tool.setuptools]
packages = []
