[project]
name = "image-search"
version = "0.1.0"
description = "Image search examples for cocoindex: CLIP and ColPali-based embedding."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[colpali]>=0.3.26,<1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.100.0",
    "torch>=2.0.0",
    "transformers>=4.29.0",          # For CLIP model in main.py
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.3",
]

[tool.setuptools]
packages = []
