[project]
name = "patient-intake-extraction"
version = "0.1.0"
description = "Extract structured information from patient intake forms using LLM."
requires-python = ">=3.10"
dependencies = [
    "cocoindex>=0.3.26,<1",
    "python-dotenv>=1.0.1",
    "markitdown[pdf,docx]>=0.1.2",
    "openai>=1.68.2",
]
