[project]
name = "pdf-embedding"
version = "0.1.0"
description = "Simple example for cocoindex: build embedding index based on local PDF files."
requires-python = ">=3.11"
dependencies = [
    "cocoindex[embeddings]>=0.3.26,<1",
    "python-dotenv>=1.0.1",
    "marker-pdf>=1.8.5",
    "psycopg[binary,pool]",
    "jinja2>=3.1.6",
]

[tool.setuptools]
packages = []
